Update the plugin information
- Update the README.md to tell other user which the original repository
  and update the command to add this plugin.
- Update the plugin.xml to redirect the repository url, issue url, id
  and version to reflect the current repository

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-	id="org.hygieiasoft.cordova.uid"
-	version="1.1.0">
+	id="org.ivanchaz.cordova.uid"
+	version="1.2.0">
 	<name>UID</name>
 	<description>Cordova plugin to get unique identifiers: UUID, IMEI, IMSI, ICCID and MAC.</description>
 	<license>MIT</license>
 	<keywords>cordova,uid,imei,imsi,uuid,sim,iccid,mac</keywords>
-	<repo>https://github.com/hygieiasoft/cordova-plugin-uid</repo>
-	<issue>https://github.com/hygieiasoft/cordova-plugin-uid/issues</issue>
+	<repo>https://github.com/ivanchaz/cordova-plugin-uid</repo>
+	<issue>https://github.com/ivanchaz/cordova-plugin-uid/issues</issue>
 
 	<js-module src="www/uid.js" name="uid">
 		<clobbers target="cordova.plugins.uid" />
