--- a/plugin.xml
+++ b/plugin.xml
@@ -35,6 +35,8 @@
 		</config-file>
 		<header-file src="src/ios/CDVUID.h" />
     <source-file src="src/ios/CDVUID.m" />
+		<header-file src="src/ios/OpenUDID.h" />
+    <source-file src="src/ios/OpenUDID.m" />
 	</platform>
 
 </plugin>
