--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-	id="org.ivanchaz.cordova.uid"
+	id="cordova-plugin-dreamover-uid"
 	version="1.2.0">
 	<name>UID</name>
 	<description>Cordova plugin to get unique identifiers: UUID, IMEI, IMSI, ICCID and MAC.</description>
